new project added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <p>A collection of scripts in Bash to automate some common tasks.</p>
             </li>
             <li>
+                <a href="https://github.com/Davide-Lotito/mdns-security" target="_blank" class="left">mDNS Security</a>
+                <img src="./images/collaboration.png" class="right">
+                <p>The goal is to simulate a DoS attack on a target, relying on the mDNS protocol.</p>
+            </li>
+            <li>
                 <a href="https://github.com/Davide-Lotito/Zeek-Script" target="_blank" class="left">Zeek Scripting</a>
                 <p>Some Zeek's scripts, for the thesis activity of my Bachelor degree.</p>
             </li>
