some minor modifies on style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="bio">
         <p>
-            At the present date I am a postgraduate student of computer engineering at the University of Pavia, in Italy, where I got my bachelor degree last year.
+            At the present date I am a postgraduate student of computer engineering at the <a href="https://web.unipv.it/">University of Pavia</a>, in Italy, where I got my bachelor degree last year.
             <br>
             I am very interested in topics related to <strong>computer security and networking</strong>. 
         </p>
