--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>
             At the present date I am a postgraduate student of computer engineering at the <a href="https://web.unipv.it/">University of Pavia</a>, in Italy, where I got my bachelor degree last year.
             <br>
-            I am very interested in topics related to <strong>computer security and networking</strong>. 
+            I am very interested in topics related to <strong>computer security and networking</strong>. If you are interested, you can get my <a id="cv" href="https://drive.google.com/uc?id=1CpT_UV1Dv_s-RoH-ffRwjBQyXycZWFeE&export=download" download>curriculum vitae</a>.
         </p>
     </div>
 
@@ -45,6 +45,11 @@
     <div class="projects" id="projects">
         <h2 class="title">Projects</h2>
         <ul>
+            <li>
+                <a href="https://github.com/Davide-Lotito/translator-cloud-project" target="_blank" class="left">Translator Cloud Project</a>
+                <img src="./images/collaboration.png" class="right">
+                <p>It is an online translator that uses artificial intelligence algorithms to improve translation.</p>
+            </li>
             <li>
                 <a href="https://github.com/Davide-Lotito/BashScripting" target="_blank" class="left">Bash Scripting</a>
                 <p>A collection of scripts in Bash to automate some common tasks.</p>
@@ -88,13 +93,15 @@
     <!--Contacts Section-->
     <div class="contact" id="contact">
         <h2 class="title">Contact</h2>
-            <img src="./images/mail.png">You can contact me via email:
-            <a href="mailto:davideloti99@gmail.com">davideloti99@gmail.com</a>
+            <img src="./images/mail.png" style="display:inline;">
+            You can contact me via email:
+            <img src="./images/email.PNG" id="email-img">
+            <!-- <a href="mailto:davideloti99@gmail.com">davideloti99@gmail.com</a> -->
     </div>
 
     <div class="footer">
         <p>Davide Pio Lotito - All rights reserved</p>
-        <p>&copy; Copyright 2022</p>
+        <p>&copy; Copyright 2023</p>
         <a href="https://github.com/Davide-Lotito" target="_blank"><img src="./images/github.png"></a>
         <a href="https://www.linkedin.com/in/davide-lotito"><img src="./images/linkedin.png"></a>
         <a href="https://twitter.com/LotitoDavidePio"><img src="./images/twitter.png"></a> 
