--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="This is my personal website">
     <meta name="author" content="Lotito Davide Pio">
     <link rel="stylesheet" href="./style/index.css"><!--custom style CSS-->
+    <link rel="stylesheet" href="./style/button.css"><!--button CV style-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!-- icon library -->
 </head>
 <body>
@@ -35,8 +36,11 @@
         <p>
             At the present date I am a postgraduate student of computer engineering at the <a href="https://web.unipv.it/">University of Pavia</a>, in Italy, where I got my bachelor degree last year.
             <br>
-            I am very interested in topics related to <strong>computer security and networking</strong>. If you are interested, you can get my <a id="cv" href="https://drive.google.com/uc?id=1CpT_UV1Dv_s-RoH-ffRwjBQyXycZWFeE&export=download" download>curriculum vitae</a>.
+            I am very interested in topics related to <strong>computer security and networking</strong>.
         </p>
+        <div class="buttons-container">
+            <button class="button-arounder" onclick="window.location.href='https://drive.google.com/file/d/1db0qzoYV4YD45-5janjCSM0gIX1HXnwP/view';">Get my CV</button>
+        </div>
     </div>
 
     <button onclick="topFunction()" id="go-top-btn" title="Go to top">Top</button> 
