new front-end adds

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
     <!--Header Section-->
     <header id="home" class="head-banner">
-        <h2 class="title">Davide Lotito</h2>
-        <h4>personal website</h4>
+        <div class="stocazzo">
+            <h2 class="title">Davide Pio Lotito</h2>
+            <h4>Something about me</h4>
+        </div>
     </header>
 
 
@@ -36,7 +38,7 @@
         <p>
             At the present date I am a postgraduate student of computer engineering at the <a href="https://web.unipv.it/">University of Pavia</a>, in Italy, where I got my bachelor degree last year.
             <br>
-            I am very interested in topics related to <strong>computer security and networking</strong>.
+            I am very interested in topics related to <strong>Cybersecurity and Networking</strong>.
         </p>
         <div class="buttons-container">
             <button class="button-arounder" onclick="window.location.href='https://drive.google.com/file/d/1db0qzoYV4YD45-5janjCSM0gIX1HXnwP/view';">Get my CV</button>
