--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header id="home" class="head-banner">
         <div class="stocazzo">
             <h2 class="title">Davide Pio Lotito</h2>
-            <h4>Something about me</h4>
+            <!-- <h4>Something about me</h4> -->
         </div>
     </header>
 
@@ -40,11 +40,8 @@
         <p>
             At the present date I am a postgraduate computer engineer. I got my master degree at the <a href="https://web.unipv.it/">University of Pavia</a>, in Italy, in September 2023.
             <br>
-            I am very interested in topics related to <strong>Cybersecurity and Networking</strong>.
+            I work in the cybersecurity industry and every day I deal with issues regarding cybersecurity, networking, and infrastructure (virtual and otherwise). 
         </p>
-        <div class="buttons-container">
-            <button class="button-arounder" onclick="window.location.href='https://drive.google.com/file/d/1db0qzoYV4YD45-5janjCSM0gIX1HXnwP/view';">Get my CV</button>
-        </div>
     </div>
 
     <button onclick="topFunction()" id="go-top-btn" title="Go to top">Top</button> 
@@ -102,7 +99,7 @@
 
     <!--Projects Section-->
     <div class="projects" id="projects">
-        <h2 class="title">Projects</h2>
+        <h2 class="title">University projects</h2>
         <ul>
             <li>
                 <a href="https://github.com/Davide-Lotito/translator-cloud-project" target="_blank" class="left">Translator Cloud Project</a>
